# samaryn

./: .dockerignore  .env.example  .gitignore  LICENSE  PRD.md  README.md  docker-compose.yml  train_indobert_colab.ipynb
.github/workflows/: deploy-samaryn.yml  rollback-samaryn.yml
config/: default.yaml
docs/plans/: 2026-06-16-operator-dashboard-v1.md
docs/research/Prompt Injection Research/: A Survey on Large Language Model based Autonomous Agents.md  AgentRedBench Dynamic Redteaming and Integration-Aware Defense for LLM Agents over SaaS Integrations.md  BERT Pre-training of Deep Bidirectional Transformers for Language Understanding.md  BIPIA.md  Bab 1 Latar Belakang Samaryn Draft.md  Bab 2 Tinjauan Pustaka Samaryn Tabel.md  Bab 3 Metodologi Samaryn Draft.md  IndoBERT.md  (+37 more)
gateway/: Cargo.toml  Dockerfile
gateway/config/: default.yaml
gateway/src/: config.rs  dashboard_aggregate.rs  dashboard_events.rs  error.rs  main.rs  state.rs
gateway/src/assets/: dashboard.html  demo.html  docs.html  landing.html
gateway/src/middleware/: auth.rs  logging.rs
gateway/src/models/: dashboard.rs  mod.rs  openai.rs  security.rs
gateway/src/proxy/: mod.rs  provider.rs  streaming.rs
gateway/src/routes/: chat.rs  dashboard.rs  dashboard_api.rs  demo.rs  docs.rs  health.rs  landing.rs  mod.rs
gateway/src/security/: mod.rs  pii.rs  rules.rs  scanner.rs
ml-service/: Dockerfile  requirements.txt
ml-service/app/: __init__.py  main.py
ml-service/models/: README.md
ml-service/tests/: test_injection_detector.py
ops/: deploy-vps.sh  fetch-model-release-asset.sh
(+14 files in other folders)
